# IPC_test

./: .gitignore  COPYING  README.md  combine_results.py  ipc-experiments.bb  meson.build  run_test
conf/: layer.conf
files/ipc-experiments/: configure  meson.build  run_test
files/ipc-experiments/src/: ipc_receiver.c  ipc_sender.c
src/: ipc_receiver.c  ipc_reciever.c  ipc_sender.c
